Fix thumbs up/down style distortion. Closes #176

--- a/themes/default/media/css/styles.css
+++ b/themes/default/media/css/styles.css
@@ -814,9 +814,6 @@ p.metadata span.icon {
   background-color: #eaf3f5;
   padding-right: 5px;
 }
-.drop ul.score-drop li.scored a span.icon {
-  float: left;
-}
 .drop ul.score-drop li.like.scored a {
   color: #81c279;
   border: 1px solid #81c279;
